posiGen_FullsendBox/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>BrightPath_Result__c</fullName>
        <label>Pre-Assessment Result</label>
        <picklist>
            <picklistValues>
                <fullName>Feasible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Feasible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACP too low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not in Sunrun Unique Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease price doesn&apos;t match</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSRF below 80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feasible – 4.68 kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feasible – 6.24 kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NF – Does not meet minimum yield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NF – Not a compatible roof type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NF – Lack of feasible roof space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feasible – 8.0 kW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Building_Series__c</fullName>
        <description>Building series types</description>
        <inlineHelpText>Building series types</inlineHelpText>
        <label>Building Series</label>
        <picklist>
            <picklistValues>
                <fullName>1000 Homes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>350 Homes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500 Homes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>652 Homes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Building_Storys__c</fullName>
        <label>Building Stories</label>
        <picklist>
            <picklistValues>
                <fullName>Single Story</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two Story</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CR_Rebate_Received__c</fullName>
        <label>CR Rebate Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CR_Submission_Date__c</fullName>
        <label>CR Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Can_owner_access_utility_bill_online__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can owner access utility bill online?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Census_Tract__c</fullName>
        <description>2013 Shape Files</description>
        <inlineHelpText>2013 Shape Files</inlineHelpText>
        <label>Census Tract</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificate_Ordered_Date__c</fullName>
        <label>Certificate Ordered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certificate_Received_Date__c</fullName>
        <label>Certificate Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Clearesult_Submission_Date__c</fullName>
        <label>Clearesult Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_has_a_unique_ownership_situation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client has a unique ownership situation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Abandoned_Reason_Detail__c</fullName>
        <inlineHelpText>Enter any additional details on Lost/Abandoned reason(s).</inlineHelpText>
        <label>Closed Lost/Abandoned Reason Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Abandoned_Reason__c</fullName>
        <label>Closed Lost/Abandoned Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Not Feasible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packet Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changed Mind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility Company not Eligible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Does not want to lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not qualified home type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of service area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roof Repair Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roof Does Not Qualify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aesthetics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed_Lost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed/Lost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Co_Owner_Date_of_Birth__c</fullName>
        <label>Co Owner Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Co_Owner_Email__c</fullName>
        <label>Co-Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Co_Owner_Employer_Contact_Name__c</fullName>
        <label>Co-Owner Employer Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Owner_Employer_Phone__c</fullName>
        <label>Co-Owner Employer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Co_Owner_Employer__c</fullName>
        <label>Co-Owner Employer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Owner_Mobile_Phone__c</fullName>
        <label>Co-Owner Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Co_Owner_Monthly_Income__c</fullName>
        <label>Co Owner Monthly Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Co_Owner_SSN__c</fullName>
        <label>Co Owner SSN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Owner_Work_Phone__c</fullName>
        <label>Co-Owner Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Commencement_Date__c</fullName>
        <description>Same as First Payment Due Date</description>
        <formula>First_Payment_Due_Dat__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commission_Amount__c</fullName>
        <label>Commission Amount</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Approved_Payout_Date__c</fullName>
        <label>Approved Payout Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commission_Approved_Payout__c</fullName>
        <label>Approved Payout</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Charged_Back__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Charged Back?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commission_Description__c</fullName>
        <label>Commission Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commission_Install_Payout_Date__c</fullName>
        <label>Install Payout Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commission_Install_Payout__c</fullName>
        <label>Install Payout</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Month__c</fullName>
        <label>Commission Month</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Paid_Date__c</fullName>
        <label>Commission Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commission_Tier__c</fullName>
        <label>Commission Tier</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Concierge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Concierge</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Concierge</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confirmed_home_is_not_a_double__c</fullName>
        <description>From lead</description>
        <label>Confirmed home is not a double</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consulting_Agreement__c</fullName>
        <label>Consulting Agreement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Reference_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Reference 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Contact Reference 1)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Reference_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Reference 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Contact Reference 2)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Applicant_Name__c</fullName>
        <formula>Property__r.AssessorOwnerName1__c</formula>
        <label>Contract Applicant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Approved_By__c</fullName>
        <description>Records who approved contract</description>
        <label>Contract Approved By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Joint_Applicant_Name__c</fullName>
        <formula>Property__r.AssessorOwnerName2__c</formula>
        <label>Contract Joint Applicant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contracts_Approved_Date__c</fullName>
        <inlineHelpText>Enter Date Contracts were Approved</inlineHelpText>
        <label>Contracts Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contracts_Finally_Submitted_to_DC_Date__c</fullName>
        <label>Contracts Finally Submitted to DC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contracts_Initially_Submitted_to_DC_Date__c</fullName>
        <label>Contracts Initially Submitted to DC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contracts_Last_Reviewed_By_DC_Date__c</fullName>
        <formula>IF(ISNULL(Contracts_Rejected_By_DC_Date__c), Contracts_Approved_Date__c,
IF(ISNULL(Contracts_Approved_Date__c), Contracts_Rejected_By_DC_Date__c,
IF(Contracts_Approved_Date__c &gt;= Contracts_Rejected_By_DC_Date__c, Contracts_Approved_Date__c , Contracts_Rejected_By_DC_Date__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contracts Last Reviewed By DC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contracts_Rejected_By_DC_Date__c</fullName>
        <label>Contracts Rejected By DC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contracts_Signed_Date__c</fullName>
        <label>Contracts Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Converted_Lead_Status__c</fullName>
        <inlineHelpText>This makes it easier to do Install reports leveraging the status on the Lead it came from.</inlineHelpText>
        <label>Converted Lead Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_of_Pipeline_Stage__c</fullName>
        <label>Copy of Pipeline Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_per_Watt_Escalation_Percentage__c</fullName>
        <label>Cost per Watt Escalation Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; + Property__r.County__c,  Property__r.County__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the County (from the Property record)</inlineHelpText>
        <label>County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Project_SP_Name__c</fullName>
        <formula>&apos;SF_CreateTemplateProjectForOpportunity&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Project SP Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Property_SP_Name__c</fullName>
        <formula>&apos;SF_CreatePropertyFromNewOpp&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Property SP Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Month__c</fullName>
        <formula>CreatedDate -  DAY(DATEVALUE(CreatedDate)) + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_User_Email_Address__c</fullName>
        <formula>$User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_User_ID__c</fullName>
        <formula>$User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_User_is_CL__c</fullName>
        <formula>Project_Manager__c =  $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User is CL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Hold_Expiry__c</fullName>
        <label>Customer Hold Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Incentive__c</fullName>
        <label>Customer Incentive</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Name_And_Property_Address__c</fullName>
        <formula>Account.Name + &apos; at &apos; +  Property__r.Address_Line_1__c + &apos;, &apos; + Property__r.City__c + &apos; &apos; + TEXT(Property__r.State__c) + &apos; &apos; + Property__r.ZipCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name And Property Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_No_Matches__c</fullName>
        <formula>IF(  VALUE(LMS_Customer_Number__c  ) &lt;&gt;  LMS_Number_from_Opp__c , FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer # Matches</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Survey__c</fullName>
        <label>Customer Service Survey</label>
        <picklist>
            <picklistValues>
                <fullName>Exuberant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Complaint</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Testimonial__c</fullName>
        <inlineHelpText>Does the customer have a testimonial? (Select yes / no)</inlineHelpText>
        <label>Customer Testimonial?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Testimonialmessage__c</fullName>
        <inlineHelpText>Insert any customer testimonial from email, phone, or fax in this box. (Add images as well if available.</inlineHelpText>
        <label>Customer Testimonial Message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Customer_Waives_Roof_Layout_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Customer Waives Roof Layout Approvals</inlineHelpText>
        <label>Customer Waives Roof Layout Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Electrical_Completed__c</fullName>
        <label>Date Electrical Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Install_Material_Equip_Left_Whse__c</fullName>
        <label>Date Install Material/Equip. Left Whse</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_PV_Electrical_Left_W_H__c</fullName>
        <label>Date PV Electrical Left W/H</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Released_to_Contractor__c</fullName>
        <label>Date Released to Contractor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Released_to_EE__c</fullName>
        <label>Date Released to EE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Released_to_Installer__c</fullName>
        <label>Date Released to Installer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Customer_Survey__c</fullName>
        <label>Date of Customer Survey</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Contract_Approved_to_EU_Complete__c</fullName>
        <formula>EU_Completed_Date__c - Contracts_Approved_Date__c</formula>
        <label>Days Contract Approved to EU Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Contract_Approved_to_Feasible__c</fullName>
        <formula>Roof_Assessment_Complete_Date__c -  Contracts_Approved_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Contract Approved to Feasible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Contract_Approved_to_Installed__c</fullName>
        <formula>Install_Completed__c -  Contracts_Approved_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Contract Approved to Installed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Feasible_to_Installed__c</fullName>
        <formula>Install_Completed__c -  Roof_Assessment_Complete_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Feasible to Installed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Feasible_to_Matl_Out_of_WH__c</fullName>
        <formula>Date_Install_Material_Equip_Left_Whse__c -   Roof_Assessment_Complete_Date__c</formula>
        <label>Days Feasible to Matl Out of WH</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Final_Inspection__c</fullName>
        <formula>Lead_Age_Converted__c + ( Final_Inspection_Notification_Received__c  - DATEVALUE( CreatedDate ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Final Inspection</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Install_Completed__c</fullName>
        <formula>Lead_Age_Converted__c + ( Install_Completed__c  - DATEVALUE( CreatedDate ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Install Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Install_Released__c</fullName>
        <formula>Lead_Age_Converted__c + (Install_Released__c - DATEVALUE( CreatedDate ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Install Released</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Lead_Created_to_Installed__c</fullName>
        <formula>Install_Completed__c - Account.Lead_Created_Date__c</formula>
        <label>Days Lead Created to Installed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Matl_Out_of_WH_to_Install_Complete__c</fullName>
        <formula>Max(Install_Completed__c -  Date_Install_Material_Equip_Left_Whse__c)</formula>
        <label>Days Matl Out of WH to Install Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Mtrls_leave_Whse__c</fullName>
        <formula>Lead_Age_Converted__c + ( Date_Install_Material_Equip_Left_Whse__c  - DATEVALUE( CreatedDate ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Mtrls leave Whse</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_PIS_to_EU_complete__c</fullName>
        <formula>EU_Completed_Date__c -  PVI_Placed_In_Service_Date__c</formula>
        <label>Days PIS to EU complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Page_Four_Mailed_Date__c</fullName>
        <formula>Today () -  Page_Four_Mailed_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Page Four Mailed Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deferment_Incentive_Months__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Deferment Incentive (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deferral_Start_Date__c</fullName>
        <label>Deferral Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposit_Clearing_Status__c</fullName>
        <inlineHelpText>Has the deposited cleared?</inlineHelpText>
        <label>Deposit Clearing Status</label>
        <picklist>
            <picklistValues>
                <fullName>Cleared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deposit_Received_Date__c</fullName>
        <inlineHelpText>Date Deposit is Made from the Customer</inlineHelpText>
        <label>Deposit Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposit_Refunded_On_Date__c</fullName>
        <inlineHelpText>Date deposit refunded.</inlineHelpText>
        <label>Deposit Refunded On Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diagram__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diagram</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disconnect_Status__c</fullName>
        <label>Disconnect Status</label>
        <picklist>
            <picklistValues>
                <fullName>Never Disconnected</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Disconnected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reconnected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Docusign_Fields_Contain_Data__c</fullName>
        <formula>AND
(
NOT(ISBLANK(  Property__r.AssessorOwnerName1__c  )),
NOT(ISBLANK(  Property__r.Assessor_House__c )),
NOT(ISBLANK(  Property__r.Assessor_Street_Name__c  )),
NOT(ISBLANK(  Property__r.Assessor_City__c  )),
NOT(ISBLANK(  TEXT(Property__r.Assessor_State__c) )),

NOT(ISBLANK(   Property__r.Assessor_ZIP__c ) ),
NOT(ISBLANK( Property__r.Name))
)</formula>
        <label>Docusign Fields Contain Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Does_client_have_shading_around_home__c</fullName>
        <description>From lead</description>
        <label>Does client have shading around home?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Driver_s_License_State_ID__c</fullName>
        <inlineHelpText>Any extra documents customer has that identifies who they are....</inlineHelpText>
        <label>Driver&apos;s License/State ID</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_Assigned_Date__c</fullName>
        <description>This is populated by the EA Project being edited.</description>
        <label>EA Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_Completed_Date__c</fullName>
        <description>This is populated from the EA Project</description>
        <label>EA Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EA_Status__c</fullName>
        <label>EA Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EE_Amount__c</fullName>
        <formula>Validation_EE_Monthly_Payment__c  *  EE_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EE Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EE_Assessor_Contractor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EE Assessor Contractor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Subcontractor</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (EE Assessor Contractor)</relationshipLabel>
        <relationshipName>Opportunities_EE_Assessor_Contractor_For</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EE_Assessor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EE Assessor Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities_Assessor_For</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EE_Audit_Age__c</fullName>
        <formula>IF( ISNULL(  EA_Completed_Date__c ) , TODAY() - Contracts_Approved_Date__c , EA_Completed_Date__c - Contracts_Approved_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EE Audit Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EE_Lease_Amount__c</fullName>
        <formula>IF( Has_EE_as_a_Solar_Product__c , 1200, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EE Lease Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EE_Month_01__c</fullName>
        <label>EE Month 01</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EE_Month_02__c</fullName>
        <label>EE Month 02</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EE_Month_03__c</fullName>
        <label>EE Month 03</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EE_Pipeline_Stage__c</fullName>
        <formula>IF(OR(EA_Status__c = &quot;Cancelled&quot;,EA_Status__c = &quot;Complete - Cancel&quot;, EU_Status__c = &quot;Cancelled&quot;), &quot;Cancelled&quot;,
IF(AND(EA_Status__c = &quot;Completed&quot;,EU_Status__c = &quot;Completed&quot;), &quot;EU Completed&quot;,
IF(AND(EA_Status__c = &quot;Completed&quot;,EU_Status__c = &quot;On Hold&quot;), &quot;EU On Hold&quot;,
IF(AND(EA_Status__c = &quot;Completed&quot;,OR(EU_Status__c = &quot;Active&quot;,ISBLANK(EU_Status__c))), &quot;Pending EU&quot;,
IF(EA_Status__c = &quot;On Hold&quot;, &quot;EA On Hold&quot;,
IF(OR(EA_Status__c = &quot;Active&quot;, ISBLANK(EA_Status__c) ), &quot;Pending EA&quot;, &quot;-&quot;
)
)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EE Pipeline Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EE_Program_Performed_Already__c</fullName>
        <label>EE Program Performed Already</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EE_Stage__c</fullName>
        <label>EE Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Not Ready for EE</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for EE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EE Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EE Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EE_Term__c</fullName>
        <inlineHelpText>In Months</inlineHelpText>
        <label>EE Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EE_Upgrade_Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the user assigned to perform the EE Upgrade</inlineHelpText>
        <label>EE Upgrade Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities_Assigned_EE_Upgrade</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>